# rust_file_sorter

./: .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs  sorting.rs
src/metadata_parser/: datetime_parser.rs  exif_parser.rs  mod.rs  quicktime_parser.rs  riff_parser.rs
src/util/: io.rs  mod.rs
