[package]
name = "rust_file_sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
indicatif = {version = "0.17.3", features=["rayon"]}
jwalk = "0.8.1"
rayon = "1.6.1"
xxhash-rust = {version = "0.8.6", features=["xxh3"]}
